syntax = "proto3";
package raft.protocol;

option go_package = "./raftproto";

message RequestVoteRequest {
    int64 term = 1;
    string candidate_id = 2;
    int64 last_log_index = 3;
    int64 last_log_term = 4;
}

message RequestVoteResponse {
    int64 term = 1;
    bool vote_granted = 2;
}

message AppendEntriesRequest{
    int64 term = 1;
    string leader_id = 2;
    int64 prev_log_index = 3;
    int64 prev_log_term = 4;
    int64 leader_commit_index = 5;
    repeated LogEntry entries = 6;

}

message AppendEntriesResponse{
    int64 term = 2;
    bool success = 3;
}

message LogEntry {
    int64 term = 1;
    data bytes = 2;
}


service Raft {
    rpc RequestVote(RequestVoteRequest) returns (RequestVoteResponse);
    rpc AppendEntries(AppendEntriesRequest) returns (AppendEntriesResponse);
}